add browser factory

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BASE_URL="https://enotes.pointschool.ru"
 USER_NAME="test"
 PASSWORD="test"
+BROWSER="chromium" #one of following options: chromium, firefox, webkit
