--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "log4js": "^6.9.1"
   }
 }
